--- a/package.json
+++ b/package.json
@@ -7,10 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.10",
-    "socket.io-client": "^2.1.1",
-    "styled-components": "^3.3.3"
-  }
+  "license": "ISC"
 }
