--- a/gm/package.json
+++ b/gm/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "socket.io-client": "^2.1.1",
     "styled-components": "^3.3.3"
   },
   "scripts": {
